--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                 <a href="/ProgStud/index.html">
                     <img src="/ProgStud/Pictures/NytMig.jpg" class="btn rounded-circle mx-auto d-block" alt="Mig"
                         width="200" height="260">
-                    </a>
+                </a>
                 <ul class="nav nav-pills flex-column">
                     <li class="nav-item btn btn-dark btn-block mt-2">
                         <div class="d-grid">
@@ -44,9 +44,12 @@
                     <li class="nav-item dropdown btn btn-dark mt-2">
                         <a class="nav-link text-white dropdown-toggle" data-bs-toggle="dropdown" href="#">Portfolio</a>
                         <ul type="button" class="dropdown-menu">
-                            <li><a class="dropdown-item text-center" href="/ProgStud/Pages/Gallerier.html">Gallerier</a></li>
-                            <li><a class="dropdown-item text-center" href="/ProgStud/Pages/ASCII ART.html">ASCII Art</a></li>
-                            <li><a class="dropdown-item text-center" href="/ProgStud/Pages/Planter.html">Planter</a></li>
+                            <li><a class="dropdown-item text-center" href="/ProgStud/Pages/Gallerier.html">Gallerier</a>
+                            </li>
+                            <li><a class="dropdown-item text-center" href="/ProgStud/Pages/ASCII ART.html">ASCII Art</a>
+                            </li>
+                            <li><a class="dropdown-item text-center" href="/ProgStud/Pages/Planter.html">Planter</a>
+                            </li>
 
                         </ul>
                     </li>
@@ -112,7 +115,8 @@
                         det samme samme gælder for Unity, der har jeg også set nogle guides på hvordan man bruger det
                         program, men jeg har et lille problem og det er der hvor blender kommer ind i billedet,
                         jeg er ikke særlig god til at bruge de assets der er i Unity storen så derfor prøver jeg at lave
-                        mine egene assets til spil, jeg har en drøm om at lave spil som folk vil spille og som de kan lide.
+                        mine egene assets til spil, jeg har en drøm om at lave spil som folk vil spille og som de kan
+                        lide.
                     </p>
                 </div>
                 <div class="col">
